[gd_scene load_steps=4 format=3 uid="uid://dv1m71isinhx1"]

[ext_resource type="Script" path="res://scenes/ui/scripts/rule_line.gd" id="1_8g6uc"]
[ext_resource type="Texture2D" uid="uid://br0bprransq8o" path="res://assets/icons/right_arrow.png" id="1_i8ovm"]
[ext_resource type="Texture2D" uid="uid://yn5ivsfe01mc" path="res://assets/icons/right_chevron.png" id="2_5whf0"]

[node name="Rule #1" type="VBoxContainer"]
offset_right = 580.0
offset_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_8g6uc")

[node name="FromObject" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="FromObject"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 45

[node name="When" type="Label" parent="FromObject"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "When"

[node name="PropertyName" type="OptionButton" parent="FromObject"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 45

[node name="Is" type="Label" parent="FromObject"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "is"

[node name="PropertyStatus" type="OptionButton" parent="FromObject"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 45
selected = 0
item_count = 2
popup/item_0/text = "On"
popup/item_1/text = "Off"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_i8ovm")
expand_mode = 3

[node name="ToObject" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="HBoxContainer/ToObject"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 45

[node name="WhenLabel" type="Label" parent="HBoxContainer/ToObject"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "'s"

[node name="PropertyName" type="OptionButton" parent="HBoxContainer/ToObject"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 45

[node name="Becomes" type="Label" parent="HBoxContainer/ToObject"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "becomes"

[node name="PropertyStatus" type="OptionButton" parent="HBoxContainer/ToObject"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 45

[node name="HSplitContainer3" type="HSplitContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="SelectRule" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_5whf0")

[connection signal="button_down" from="HBoxContainer/SelectRule" to="." method="_on_select_rule_button_down"]
